<resources>
    <string name="app_name">Material-Design-Example</string>
    <string name="label_snackbar">Snackbar</string>
    <string name="label_simple_snack">Simple Snackbar</string>
    <string name="label_custom_snack">Custom Snackbar</string>
    <string name="snackbar_simple_message">This is a simple snackbar!</string>
    <string name="simple_snackbar_click_toast">Simple snackbar closed</string>
    <string name="custom_snackbar_click_toast">Custom snackbar closed</string>
    <string name="close">Close</string>
    <string name="snackbar_custom_message">This is a custom snackbar. Inflating custom layouts to snackbar are discouraged by Android though. Snackbar\'s intended use is to show a message and an action. They\'re essentially like interactive toasts.</string>
    <string name="label_simple_snack_customize">Simple snackbar customize</string>
    <string name="label_nested_scroll">Nested scroll with animation</string>
    <string name="test_text" translatable="false">Lorem ipsum dolor sit amet, ex ludus civibus pri, idque nostro euripidis ne usu. Id vocent aliquip ponderum vis. Perpetua disputando et duo, mollis inermis at his. Id eam partem graeci disputando. Numquam accusam ocurreret mei no. Quo an error virtute periculis, purto fastidii consulatu id vim, ad his facer denique constituam. Te quas similique mel, ea albucius periculis mediocritatem vix, et mel aliquip facilisis. An sed commune omnesque, et magna postea maiorum eam. Et mel solum diceret officiis, simul mnesarchum mei an. Ea novum mollis tractatos vel, no quo tantas virtute, ei homero essent iriure pro. Nobis accumsan sadipscing vim ut. Ei sit utamur appetere perpetua. Ea odio disputando vel, te duo quas illum ponderum, error temporibus eum at. Rebum facer etiam per et, ex eos apeirian accusamus. Et mel mundi inimicus, vel primis percipitur in. Et eros noluisse conclusionemque ius, vix aperiam inimicus ad, et aeque salutandi deterruisset pri. Scripta numquam volumus ex nam, ius in dico ipsum nusquam. Elit labore constituto nec ne, nec ad iracundia vulputate. Quo et minim utamur debitis, illum nulla accommodare eu vis. Ullum simul cu est, facer perfecto perpetua te vis. Nec an autem legere, mea an tollit postulant quaerendum. Vix reque inani omnium ex, ut causae sanctus vis. Aeque tollit aeterno nam at, et his doming dictas splendide, tantas scripserit definitiones vim ne. Amet meis officiis ex eos, est harum partem quaestio cu, ius cu admodum tacimates. Meliore nominavi sed ei. Copiosae tacimates corrumpit duo et, modo nostrum democritum eu eam. Mea ea idque harum zril, cu brute suscipit persequeris eos. Habeo latine cu eos. Debet explicari qui te, adhuc facilisis cu qui. Ius populo malorum pertinacia at, ius an scripta instructior. Diam omnesque ei mei, ad brute oblique blandit ius. Cum ut essent latine, eos in wisi philosophia, nec eu everti accusata dissentiunt. Sit at ludus pertinacia, sint argumentum disputationi per at. Pro et esse putant. Pro in rebum feugiat imperdiet. Tollit vidisse equidem pro no. Id vis hinc accusam appellantur, solet homero conclusionemque ne vim. Debet iuvaret copiosae eu duo. At mel patrioque vituperata, sumo consul fierent an sit, illum pericula concludaturque id mea. Ad vis erat aeque putent, ad labores inermis mei, purto iriure vix id. Ex quot sadipscing mel, eum id ancillae lobortis. Ei qualisque assueverit mel, in vix choro lobortis adversarium. Vis alii atomorum no, mea cu eleifend appellantur contentiones. Ad usu eligendi offendit salutatus. Congue essent molestie an mei, hinc ancillae ius an. Augue iisque quo ex, vix percipit lobortis ut, vix quas incorrupte eu. Ea sit sale concludaturque, usu veri dissentiet ea. Te vocent intellegat ullamcorper his. Ei eam perfecto tractatos deterruisset, vel an utinam sapientem. Usu an dictas posidonium, per viderer prompta dolores no, diam case referrentur duo an. Mucius deserunt nam in.</string>
    <string name="label_bottom_sheet">Bottom sheet</string>
    <string name="bottom_sheet_open">Open bottom sheet</string>
    <string name="bottom_sheet_close">Close bottom sheet</string>
    <string name="bottom_sheet_content">Bottom sheet content</string>
    <string name="text_bottom_sheet_content">Main Content</string>
</resources>
